methods.returning.MethodsReturning.scala.error
Compilation error:
MethodsReturning:8: error: type mismatch;
 found   : Unit
 required: Boolean
  for (compteur <-1 to 6) {
                ^MethodsReturning:14: error: return outside method definition
  return vuBiscuit();
  ^