methods.returning.MethodsReturning.scala.code
def haveBaggle():Boolean = {
  for (compteur <-1 to 6) {
    forward();
    if (estSurBiscuit) {
      return true
    }
    }
  for (compteur <-1 to 6) {
    backward();
  }
}

if (haveBaggle == true) {
  return vuBiscuit();
}